cli/tests/snapshot/snapshots/snapshot__eval_stderr_include_multiple_with_def.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: multiple declarations for included field `foo`
  ┌─ [INPUTS_PATH]/errors/include_multiple_with_def.ncl:5:10
  │
5 │ {include foo, foo = {}}
  │          ^^^  --- but also declared here
  │          │     
  │          included here
  │
  = Piecewise definitions involving an included field are currently not supported
